feat: adding owned rooms and user rooms routes
