# room-service/internal/delivery/routes/routes.go
@@ -20,6 +20,9 @@ func RegisterRoutes(roomHandler *handler.RoomHandler, memberHandler *handler.Mem
 	http.HandleFunc("POST /rooms/{roomID}/join", middleware.LoggingMiddleware(memberHandler.JoinRoom))
 
 	http.HandleFunc("GET /rooms/{roomID}/members", middleware.LoggingMiddleware(memberHandler.ListMembers))
+	http.HandleFunc("GET /users/rooms", middleware.LoggingMiddleware(memberHandler.GetRoomsByUserID))
+	http.HandleFunc("GET /rooms/mine", middleware.LoggingMiddleware(memberHandler.GetRoomsOwnedByUser))
+
 	http.HandleFunc("POST /rooms/{roomID}/members", middleware.LoggingMiddleware(memberHandler.AddMember))
 	http.HandleFunc("PUT /rooms/{roomID}/members/{memberID}/role", middleware.LoggingMiddleware(memberHandler.UpdateRole))
 	http.HandleFunc("DELETE /rooms/{roomID}/members/{memberID}", middleware.LoggingMiddleware(memberHandler.RemoveMember))
